# hochrechnung

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
configs/: base.yaml  config.yaml.example  germany_2020.yaml  germany_2022.yaml  germany_2023.yaml  germany_2024.yaml  germany_2025.yaml  hessen_2022.yaml  hessen_2023.yaml  hessen_2024.yaml  hessen_2025.yaml  ld_2023.yaml  ld_2025.yaml  leipzig_2023.yaml
docs/: architecture.md  data_dictionary.md  runbook.md  troubleshooting.md  verification.md
experiments/: __init__.py  model_comparison.py  temporal_stability.py
src/hochrechnung/: __init__.py  cli.py
src/hochrechnung/assessment/: __init__.py  core.py  reporter.py
src/hochrechnung/calibration/: __init__.py  base.py  export.py  loader.py  loglinear.py  multiplicative.py  persistence.py  server.py  spatial.py  stratified.py  validation.py
src/hochrechnung/config/: __init__.py  loader.py  settings.py
src/hochrechnung/etl/: __init__.py  pipeline.py
src/hochrechnung/evaluation/: __init__.py  experiment.py  metrics.py  report.py
src/hochrechnung/features/: __init__.py  definitions.py  infrastructure.py  pipeline.py
src/hochrechnung/ingestion/: __init__.py  base.py  campaign.py  counter.py  gebietseinheiten.py  osm.py  structural.py  traffic.py
src/hochrechnung/modeling/: __init__.py  curated.py  data.py  inference.py  models.py  preprocessing.py  training.py
src/hochrechnung/normalization/: __init__.py  columns.py  spatial.py  temporal.py
src/hochrechnung/schemas/: __init__.py  campaign.py  counter.py  infrastructure.py  output.py  registry.py  structural.py  traffic.py
src/hochrechnung/targets/: __init__.py  dtv.py  quality.py
src/hochrechnung/utils/: __init__.py  cache.py  gdal.py  hashing.py  logging.py
src/hochrechnung/validation/: __init__.py  core.py  reporter.py
src/hochrechnung/verification/: __init__.py  export.py  outliers.py  persistence.py  server.py  tiles.py
src/hochrechnung/verification/static/: app.js  index.html
tests/: __init__.py  conftest.py  test_assessment.py  test_calibration.py  test_calibration_integration.py  test_campaign_ingestion.py  test_config.py  test_modeling_data.py  test_package.py  test_schemas.py  test_validation.py
