[project]
name = "hochrechnung"
version = "0.1.0"
description = "Bicycle traffic estimation pipeline: ETL, feature engineering, and regression models for DTV per OSM edge"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "VisionVelo" }
]
keywords = ["bicycle", "traffic", "ml", "geospatial", "etl"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    # Core data processing
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "polars>=0.20.0,<1.0.0",

    # Geospatial
    "geopandas>=0.14.0,<1.0.0",
    "shapely>=2.0.0,<3.0.0",
    "pyogrio>=0.7.0,<1.0.0",
    "pyproj>=3.6.0,<4.0.0",

    # Data validation
    "pandera>=0.18.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",

    # Machine learning
    "scikit-learn>=1.4.0,<2.0.0",
    "xgboost>=2.0.0,<3.0.0",

    # Experiment tracking
    "mlflow>=2.10.0,<3.0.0",

    # Configuration
    "pyyaml>=6.0.0,<7.0.0",
    "python-dotenv>=1.0.0,<2.0.0",

    # Utilities
    "structlog>=24.1.0,<25.0.0",
    "typer>=0.9.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "tqdm>=4.66.0,<5.0.0",

    # Hashing for cache
    "xxhash>=3.4.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-anyio>=0.0.0,<1.0.0",
    "hypothesis>=6.98.0,<7.0.0",
    "ruff>=0.2.0,<1.0.0",
    "pyright>=1.1.350,<2.0.0",
    "pre-commit>=3.6.0,<4.0.0",
    "ipython>=8.21.0,<9.0.0",
]

[project.scripts]
hochrechnung = "hochrechnung.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hochrechnung"]

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip strict
]

[tool.ruff.lint.isort]
known-first-party = ["hochrechnung"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ARG001"]  # Unused function args in tests

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
exclude = ["**/node_modules", "**/__pycache__", ".venv"]
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportPrivateUsage = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--strict-markers",
    "-ra",
    "-q",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src/hochrechnung"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
